crates/products/wt/client/src/snapshots/wt_client__ssh__tests__duplicate_world_names_ssh_config.snap
---
source: crates/products/wt/client/src/ssh.rs
expression: "normalize_home(&managed, temp.path())"
---
# Generated by wt sync. Do not edit.

Host local.same
  HostName 192.0.2.2
  User wt
  Port 22
  HostKeyAlias local.same
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression no
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  RequestTTY force
  RemoteCommand BYOBU_ALT_TITLE='local.same' /usr/local/bin/wt-host-shell

Host local.same-direct
  HostName 192.0.2.2
  User wt
  Port 22
  HostKeyAlias local.same
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression no
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no

Host lab.same
  HostName 192.0.2.2
  User wt
  Port 22
  HostKeyAlias lab.same
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ProxyJump wt-server
  RequestTTY force
  RemoteCommand BYOBU_ALT_TITLE='lab.same' /usr/local/bin/wt-host-shell

Host lab.same-direct
  HostName 192.0.2.2
  User wt
  Port 22
  HostKeyAlias lab.same
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ProxyJump wt-server
