crates/products/wt/client/src/snapshots/wt_client__ssh__tests__error_world_ssh_config.snap
---
source: crates/products/wt/client/src/ssh.rs
expression: "normalize_home(&config, temp.path())"
---
# Generated by wt sync. Do not edit.

Host local.broken
  HostName 192.0.2.4
  User wt
  Port 22
  HostKeyAlias local.broken
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression no
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  RequestTTY force
  RemoteCommand BYOBU_ALT_TITLE='local.broken' /usr/local/bin/wt-guest-shell

Host local.broken-direct
  HostName 192.0.2.4
  User wt
  Port 22
  HostKeyAlias local.broken
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression no
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no

Host broken
  HostName 192.0.2.4
  User wt
  Port 22
  HostKeyAlias local.broken
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression no
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  RequestTTY force
  RemoteCommand BYOBU_ALT_TITLE='local.broken' /usr/local/bin/wt-guest-shell

Host broken-direct
  HostName 192.0.2.4
  User wt
  Port 22
  HostKeyAlias local.broken
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression no
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
