crates/products/wt/client/src/snapshots/wt_client__ssh__tests__remote_worlds_ssh_config.snap
---
source: crates/products/wt/client/src/ssh.rs
expression: "normalize_home(&managed, temp.path())"
---
# Generated by wt sync. Do not edit.

Host lab.world-one
  HostName 192.0.2.10
  User wt
  Port 22
  HostKeyAlias lab.world-one
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ProxyJump wt-server
  RequestTTY force
  RemoteCommand BYOBU_ALT_TITLE='lab.world-one' /usr/local/bin/wt-host-shell

Host lab.world-one-direct
  HostName 192.0.2.10
  User wt
  Port 22
  HostKeyAlias lab.world-one
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ProxyJump wt-server

Host world-one
  HostName 192.0.2.10
  User wt
  Port 22
  HostKeyAlias lab.world-one
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ProxyJump wt-server
  RequestTTY force
  RemoteCommand BYOBU_ALT_TITLE='lab.world-one' /usr/local/bin/wt-host-shell

Host world-one-direct
  HostName 192.0.2.10
  User wt
  Port 22
  HostKeyAlias lab.world-one
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ProxyJump wt-server

Host lab.world-two
  HostName 192.0.2.11
  User wt
  Port 22
  HostKeyAlias lab.world-two
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ProxyJump wt-server
  RequestTTY force
  RemoteCommand BYOBU_ALT_TITLE='lab.world-two' /usr/local/bin/wt-host-shell

Host lab.world-two-direct
  HostName 192.0.2.11
  User wt
  Port 22
  HostKeyAlias lab.world-two
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ProxyJump wt-server

Host world-two
  HostName 192.0.2.11
  User wt
  Port 22
  HostKeyAlias lab.world-two
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ProxyJump wt-server
  RequestTTY force
  RemoteCommand BYOBU_ALT_TITLE='lab.world-two' /usr/local/bin/wt-host-shell

Host world-two-direct
  HostName 192.0.2.11
  User wt
  Port 22
  HostKeyAlias lab.world-two
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ProxyJump wt-server
