crates/products/wt/client/src/snapshots/wt_client__ssh__tests__running_world_ssh_config.snap
---
source: crates/products/wt/client/src/ssh.rs
expression: "normalize_home(&managed, temp.path())"
---
# Generated by wt sync. Do not edit.

Host local.repo-feature
  HostName 192.0.2.2
  User wt
  Port 22
  HostKeyAlias local.repo-feature
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression no
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  RequestTTY force
  RemoteCommand BYOBU_ALT_TITLE='local.repo-feature' /usr/local/bin/wt-guest-shell

Host local.repo-feature-direct
  HostName 192.0.2.2
  User wt
  Port 22
  HostKeyAlias local.repo-feature
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression no
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no

Host repo-feature
  HostName 192.0.2.2
  User wt
  Port 22
  HostKeyAlias local.repo-feature
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression no
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  RequestTTY force
  RemoteCommand BYOBU_ALT_TITLE='local.repo-feature' /usr/local/bin/wt-guest-shell

Host repo-feature-direct
  HostName 192.0.2.2
  User wt
  Port 22
  HostKeyAlias local.repo-feature
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression no
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
