crates/products/wt/client/src/snapshots/wt_client__ssh__tests__setup_world_known_hosts.snap
---
source: crates/products/wt/client/src/ssh.rs
expression: known_hosts
---
# Generated by wt sync. Do not edit.
local.repo-feature-host ssh-ed25519 AAAATEST
