crates/products/wt/client/src/snapshots/wt_client__ssh__tests__unique_world_ssh_config.snap
---
source: crates/products/wt/client/src/ssh.rs
expression: "normalize_home(&managed, temp.path())"
---
# Generated by wt sync. Do not edit.

Host local.repo-feature-host
  HostName 192.0.2.2
  User wt
  Port 22
  HostKeyAlias local.repo-feature-host
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression no
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no

Host local.repo-feature
  HostName 192.0.2.2
  User wt
  Port 22
  HostKeyAlias local.repo-feature-host
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression no
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  RequestTTY force
  RemoteCommand BYOBU_ALT_TITLE='local.repo-feature - repo' /usr/local/bin/wt-app-shell

Host local.repo-feature-vs
  HostName wt-app
  User vscode
  Port 2222
  HostKeyAlias local.repo-feature-vs
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression no
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  SetEnv TERM=xterm-256color
  ProxyCommand ssh -F "[HOME]/.ssh/config" -o Compression=no local.repo-feature-host /usr/local/bin/wt-devcontainer-ssh-proxy

Host repo-feature-host
  HostName 192.0.2.2
  User wt
  Port 22
  HostKeyAlias local.repo-feature-host
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression no
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no

Host repo-feature
  HostName 192.0.2.2
  User wt
  Port 22
  HostKeyAlias local.repo-feature-host
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression no
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  RequestTTY force
  RemoteCommand BYOBU_ALT_TITLE='local.repo-feature - repo' /usr/local/bin/wt-app-shell

Host repo-feature-vs
  HostName wt-app
  User vscode
  Port 2222
  HostKeyAlias local.repo-feature-vs
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression no
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  SetEnv TERM=xterm-256color
  ProxyCommand ssh -F "[HOME]/.ssh/config" -o Compression=no local.repo-feature-host /usr/local/bin/wt-devcontainer-ssh-proxy
